DeveloperOrg/src/objects/Proj__c.object
<CustomObject>
    <description>A project is a unit of work that the customer has contracted</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billable_Hours__c</fullName>
        <description>Number of billable hours allocated for this project, usually specified in the SOW</description>
        <label>Billable Hours</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consulting_Budget__c</fullName>
        <description>Amount budgeted for consulting portion of this project</description>
        <label>Consulting Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date project ends</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Budget__c</fullName>
        <description>Amount budgeted for expenses</description>
        <label>Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the customer been invoiced?</description>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Geographic location of this project</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>General notes on the project</description>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <description>Human-readable unique ID for this project</description>
        <displayFormat>Project-{00000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Requested_Skills__c</fullName>
        <label>Requested Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Python</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage of the project</description>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date project begins</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <description>Explanation of the project status</description>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the project</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Assigned_Hours__c</fullName>
        <label>Total Assigned Hours</label>
        <summarizedField>Assignment__c.Total_Hours__c</summarizedField>
        <summaryForeignKey>Assignment__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Hours_Invoiced__c</fullName>
        <label>Total Billable Hours Invoiced</label>
        <summarizedField>Timecard__c.Total_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Timecard__c.Billable__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Timecard__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Timecard__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Hours_Logged__c</fullName>
        <label>Total Billable Hours Logged</label>
        <summarizedField>Timecard__c.Total_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Timecard__c.Billable__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Timecard__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Hours_Uninvoiced__c</fullName>
        <label>Total Billable Hours Uninvoiced</label>
        <summarizedField>Timecard__c.Total_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Timecard__c.Billable__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Timecard__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>false</value>
        </summaryFilterItems>
        <summaryForeignKey>Timecard__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Nonbillable_Hours_Logged__c</fullName>
        <label>Total Nonbillable Hours Logged</label>
        <summarizedField>Timecard__c.Total_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Timecard__c.Billable__c</field>
            <operation>equals</operation>
            <value>false</value>
        </summaryFilterItems>
        <summaryForeignKey>Timecard__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Revenue_From_Assigments__c</fullName>
        <label>Total Planned Revenue From Assigments</label>
        <summarizedField>Assignment__c.Planned_Revenue__c</summarizedField>
        <summaryForeignKey>Assignment__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of project</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Billable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Billable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>My_Sharing_Reason__c</fullName>
        <label>My Sharing Reason</label>
    </sharingReasons>
</CustomObject>